--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>{{title}}</title>
     <!-- Do not forget to change the path to the css file -->
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="/css/style.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
@@ -16,7 +16,7 @@
 
         <ul class="menu">
           <li><a href="/">Home</a></li>
-          <li><a href="/create">Create Post</a></li>
+          <li><a href="/movie/create">Create Post</a></li>
           <li><a href="/search">Search</a></li>
           <li><a href="/about">About</a></li>
         </ul>
