--- a/src/views/create.hbs
+++ b/src/views/create.hbs
@@ -36,7 +36,7 @@
         </li>
         <li>
           <label for="image">Rating:</label>
-          <input type="text" class="inputFields" id="rating" name="rating" value="" />
+          <input type="number" min="1" max="5" class="inputFields" id="rating" name="rating" value="" />
         </li>
         <li>
           <label for="description">Description:</label>
