--- a/src/views/partials/catalog.hbs
+++ b/src/views/partials/catalog.hbs
@@ -12,6 +12,10 @@
         </div>
      {{else}}
         <div class="no-posts">
-            <p class="no-offer">There are no posts yet...</p>
+            {{#if params}}
+                <p class="no-offer">There are no movies matched...</p>
+            {{else}}
+                <p class="no-offer">There are no posts yet...</p>
+            {{/if}}
         </div>
 {{/each}}
