--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,11 +15,16 @@
         <img src="/img/logo.webp" alt="logo" />
 
         <ul class="menu">
-          <li><a href="/">Home</a></li>
-          <li><a href="/movie/create">Create Post</a></li>
-          <li><a href="/cast/create">Create Cast</a></li>
-          <li><a href="/search">Search</a></li>
-          <li><a href="/about">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/search">Search</a></li>
+            <!--Users-->
+            <li><a href="/movie/create">Create Post</a></li>
+            <li><a href="/cast/create">Create Cast</a></li>
+            <li><a href="/logout">Logout</a></li>     
+            <!--Guest-->
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
         </ul>
 
       </nav>
