--- a/src/views/movie/details.hbs
+++ b/src/views/movie/details.hbs
@@ -22,10 +22,12 @@
 
         <p class="disc">Description: {{movie.description}}</p>
       </div>
+      {{#if isOwner}}
       <div class="details-btn">
         <a href="/movies/{{movie._id}}/edit" id="edit-button">Edit</a>
         <a href="/movies/{{movie._id}}/delete" id="delete-button">Delete</a>
       </div>
+      {{/if}}
     </div>
     <div class="card_right">
       <img src="{{movie.imageUrl}}" alt="image" />
