Render edit page with populated data

--- a/src/views/movie/edit.hbs
+++ b/src/views/movie/edit.hbs
@@ -5,7 +5,7 @@
         them all and in the darkness bind them."</h2>
     </div>
 
-    <form action="#" method="" class="editForm">
+    <form action="" method="POST" class="editForm">
       <h2>Edit Post</h2>
       <ul class="noBullet">
         <li>
@@ -15,7 +15,7 @@
             class="inputFields"
             id="title"
             name=""
-            value="The Little Marmaid"
+            value="{{movie.title}}"
           />
         </li>
         <li>
@@ -25,7 +25,7 @@
             class="inputFields"
             id="genre"
             name=""
-            value="Fantasy"
+            value="{{movie.genre}}"
           />
         </li>
         <li>
@@ -35,7 +35,7 @@
             class="inputFields"
             id="director"
             name=""
-            value="Rob Marshall"
+            value="{{movie.director}}"
           />
         </li>
         <li>
@@ -45,7 +45,7 @@
             class="inputFields"
             id="year"
             name=""
-            value="2023"
+            value="{{movie.year}}"
           />
         </li>
         <li>
@@ -55,7 +55,7 @@
             class="inputFields"
             id="image"
             name=""
-            value="https://m.media-amazon.com/images/M/MV5BYTUxYjczMWUtYzlkZC00NTcwLWE3ODQtN2I2YTIxOTU0ZTljXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg"
+            value="{{movie.imageUrl}}"
           />
         </li>
         <li>
@@ -65,18 +65,12 @@
             class="inputFields"
             id="rating"
             name=""
-            value="4"
+            value="{{movie.rating}}"
           />
         </li>
         <li>
           <label for="description">Description:</label>
-          <textarea id="description" class="inputFields" name="description">The
-            youngest of King Triton's daughters, Ariel is a beautiful and
-            spirited young mermaid with a thirst for adventure. Longing to find
-            out more about the world beyond the sea, Ariel visits the surface
-            and falls for the dashing Prince Eric. Following her heart, she
-            makes a deal with the evil sea witch, Ursula, to experience life on
-            land.</textarea>
+          <textarea id="description" class="inputFields" name="description">{{movie.description}}</textarea>
         </li>
         <li id="center-btn">
           <button id="edit-btn">Edit</button>
