Add edit page functionality on post request

--- a/src/views/movie/edit.hbs
+++ b/src/views/movie/edit.hbs
@@ -14,7 +14,7 @@
             type="text"
             class="inputFields"
             id="title"
-            name=""
+            name="title"
             value="{{movie.title}}"
           />
         </li>
@@ -24,7 +24,7 @@
             type="text"
             class="inputFields"
             id="genre"
-            name=""
+            name="genre"
             value="{{movie.genre}}"
           />
         </li>
@@ -34,7 +34,7 @@
             type="text"
             class="inputFields"
             id="director"
-            name=""
+            name="director"
             value="{{movie.director}}"
           />
         </li>
@@ -44,7 +44,7 @@
             type="number"
             class="inputFields"
             id="year"
-            name=""
+            name="year"
             value="{{movie.year}}"
           />
         </li>
@@ -54,7 +54,7 @@
             type="text"
             class="inputFields"
             id="image"
-            name=""
+            name="imageUrl"
             value="{{movie.imageUrl}}"
           />
         </li>
@@ -64,7 +64,7 @@
             type="text"
             class="inputFields"
             id="rating"
-            name=""
+            name="rating"
             value="{{movie.rating}}"
           />
         </li>
