--- a/src/views/cast/create.hbs
+++ b/src/views/cast/create.hbs
@@ -9,15 +9,15 @@
       <ul class="noBullet">
         <li>
           <label for="name">Name:</label>
-          <input type="text" class="inputFields" id="name" name="name" value="" />
+          <input type="text" class="inputFields" id="name" name="name" value="{{name}}" />
         </li>
         <li>
           <label for="age">Age:</label>
-          <input type="number" class="inputFields" id="age" name="age" value="" />
+          <input type="number" class="inputFields" id="age" name="age" value="{{age}}" />
         </li>
         <li>
           <label for="born">Born:</label>
-          <input type="text" class="inputFields" id="born" name="born" value="" />
+          <input type="text" class="inputFields" id="born" name="born" value="{{born}}" />
         </li>
         <li>
           <label for="name-in-movie">Name in Movie:</label>
@@ -26,12 +26,12 @@
             class="inputFields"
             id="name-in-movie"
             name="nameInMovie"
-            value=""
+            value="{{nameInMovie}}"
           />
         </li>
         <li>
           <label for="image">Cast Image:</label>
-          <input type="text" class="inputFields" id="image" name="imageUrl" value="" />
+          <input type="text" class="inputFields" id="image" name="imageUrl" value="{{imageUrl}}" />
         </li>
         <li id="center-btn">
           <button id="create-btn">Add Cast</button>
