--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>{{title}}</title>
+    <title>{{pageTitle}}</title>
     <link href="/css/style.css" type="text/css" rel="stylesheet" />
   </head>
 
